--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,7 @@
+page {
+  background-color: #f7f8fa;
+}
+
 .demo-block {
   width: 100%;
 }
@@ -103,5 +107,9 @@
 }
 
 .demo-block__goods-action {
+  position: static !important;
+}
+
+.demo-block__submit-bar {
   position: static !important;
 }
